# camofy

./: .gitmodules  Cargo.toml  DESIGN.md  README.md  dev-router.sh  install.sh
.github/workflows/: release.yml
public/: index.html
src/: app.rs  auth.rs  clash.yaml  config_manager.rs  core.rs  core_async.rs  defaults.yaml  geoip.rs  logs.rs  main.rs  mihomo.rs  scheduler.rs  subscriptions.rs  system.yaml  user_profiles.rs  ws.rs
web/: index.html  package.json
web/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: AnsiText.tsx  AppHeader.tsx  AppShell.tsx  CoreSection.tsx  Layout.tsx  LoginPanel.tsx  LogsSection.tsx  NotificationBar.tsx  ProxyGroupsSection.tsx  SchedulerSection.tsx  SubscriptionsSection.tsx  SystemStatusSection.tsx  UserProfilesSection.tsx
web/src/context/: AuthContext.tsx  NotificationContext.tsx
web/src/design/: color-palette.md
web/src/hooks/: useCore.ts  useLogs.ts  useMergedConfig.ts  useProxies.ts  useScheduler.ts  useSubscriptions.ts  useUserProfiles.ts
web/src/pages/: CorePage.tsx  LoginPage.tsx  LogsPage.tsx  OverviewPage.tsx  ProfilesPage.tsx  ProxiesPage.tsx  SubscriptionsPage.tsx
