[package]
name = "camofy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rust-embed = "8"
mime_guess = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
tar = "0.4"
argon2 = { version = "0.5", default-features = false, features = ["password-hash", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
clash_verge_service_ipc = { version = "2.0.24", features = ["client"], git = "https://github.com/clash-verge-rev/clash-verge-service-ipc" }
fs2 = "0.4"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true  # 自动剥离符号表和调试信息，减小体积
